--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/root/.netbeans/8.0.2/build.properties
+user.properties.file=C:\\Users\\Santos dos Santos\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
